// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1- default state 1`] = `
Object {
  "completed": Array [],
  "conflict": false,
  "conflictFlag": 0,
  "current": "",
  "failed": Array [],
  "files": Array [],
  "log": Array [],
  "show": false,
  "skipped": Array [],
}
`;

exports[`2- add files to queue. 12 items in "files". 1`] = `
Object {
  "completed": Array [],
  "conflict": false,
  "conflictFlag": 0,
  "current": "",
  "failed": Array [],
  "files": Array [
    Object {
      "name": "style.css",
      "path": "",
    },
    Object {
      "name": "main.js",
      "path": "",
    },
    Object {
      "name": "vendor.js",
      "path": "",
    },
    Object {
      "name": "index.html",
      "path": "",
    },
    Object {
      "name": "manifest.json",
      "path": "",
    },
    Object {
      "name": "favicon.ico",
      "path": "",
    },
    Object {
      "name": "bg.jpg",
      "path": "",
    },
    Object {
      "name": "logo.png",
      "path": "",
    },
    Object {
      "name": "foo.gif",
      "path": "",
    },
    Object {
      "name": "bar.png",
      "path": "",
    },
    Object {
      "name": "baz.js",
      "path": "",
    },
    Object {
      "name": "lorem.css",
      "path": "",
    },
  ],
  "log": Array [],
  "show": true,
  "skipped": Array [],
}
`;

exports[`3- file ok action. 11 items in "files", 1 item in "completed". 1`] = `
Object {
  "completed": Array [
    Object {
      "name": "style.css",
      "path": "",
    },
  ],
  "conflict": false,
  "conflictFlag": 0,
  "current": "",
  "failed": Array [],
  "files": Array [
    Object {
      "name": "main.js",
      "path": "",
    },
    Object {
      "name": "vendor.js",
      "path": "",
    },
    Object {
      "name": "index.html",
      "path": "",
    },
    Object {
      "name": "manifest.json",
      "path": "",
    },
    Object {
      "name": "favicon.ico",
      "path": "",
    },
    Object {
      "name": "bg.jpg",
      "path": "",
    },
    Object {
      "name": "logo.png",
      "path": "",
    },
    Object {
      "name": "foo.gif",
      "path": "",
    },
    Object {
      "name": "bar.png",
      "path": "",
    },
    Object {
      "name": "baz.js",
      "path": "",
    },
    Object {
      "name": "lorem.css",
      "path": "",
    },
  ],
  "log": Array [
    Object {
      "msg": "style.css uploaded",
      "type": "success",
    },
  ],
  "show": true,
  "skipped": Array [],
}
`;

exports[`4- file ok action. 10 item in "files", 2 items in "completed". 1`] = `
Object {
  "completed": Array [
    Object {
      "name": "style.css",
      "path": "",
    },
    Object {
      "name": "main.js",
      "path": "",
    },
  ],
  "conflict": false,
  "conflictFlag": 0,
  "current": "",
  "failed": Array [],
  "files": Array [
    Object {
      "name": "vendor.js",
      "path": "",
    },
    Object {
      "name": "index.html",
      "path": "",
    },
    Object {
      "name": "manifest.json",
      "path": "",
    },
    Object {
      "name": "favicon.ico",
      "path": "",
    },
    Object {
      "name": "bg.jpg",
      "path": "",
    },
    Object {
      "name": "logo.png",
      "path": "",
    },
    Object {
      "name": "foo.gif",
      "path": "",
    },
    Object {
      "name": "bar.png",
      "path": "",
    },
    Object {
      "name": "baz.js",
      "path": "",
    },
    Object {
      "name": "lorem.css",
      "path": "",
    },
  ],
  "log": Array [
    Object {
      "msg": "style.css uploaded",
      "type": "success",
    },
    Object {
      "msg": "main.js uploaded",
      "type": "success",
    },
  ],
  "show": true,
  "skipped": Array [],
}
`;

exports[`5- file ok action. 9 item in "files", 3 items in "completed". 1`] = `
Object {
  "completed": Array [
    Object {
      "name": "style.css",
      "path": "",
    },
    Object {
      "name": "main.js",
      "path": "",
    },
    Object {
      "name": "vendor.js",
      "path": "",
    },
  ],
  "conflict": false,
  "conflictFlag": 0,
  "current": "",
  "failed": Array [],
  "files": Array [
    Object {
      "name": "index.html",
      "path": "",
    },
    Object {
      "name": "manifest.json",
      "path": "",
    },
    Object {
      "name": "favicon.ico",
      "path": "",
    },
    Object {
      "name": "bg.jpg",
      "path": "",
    },
    Object {
      "name": "logo.png",
      "path": "",
    },
    Object {
      "name": "foo.gif",
      "path": "",
    },
    Object {
      "name": "bar.png",
      "path": "",
    },
    Object {
      "name": "baz.js",
      "path": "",
    },
    Object {
      "name": "lorem.css",
      "path": "",
    },
  ],
  "log": Array [
    Object {
      "msg": "style.css uploaded",
      "type": "success",
    },
    Object {
      "msg": "main.js uploaded",
      "type": "success",
    },
    Object {
      "msg": "vendor.js uploaded",
      "type": "success",
    },
  ],
  "show": true,
  "skipped": Array [],
}
`;

exports[`6- file error action. 8 item in "files", 3 items in "completed", 1 item in "failed".  1`] = `
Object {
  "completed": Array [
    Object {
      "name": "style.css",
      "path": "",
    },
    Object {
      "name": "main.js",
      "path": "",
    },
    Object {
      "name": "vendor.js",
      "path": "",
    },
  ],
  "conflict": false,
  "conflictFlag": 0,
  "current": "",
  "failed": Array [
    Object {
      "name": "index.html",
      "path": "",
    },
  ],
  "files": Array [
    Object {
      "name": "manifest.json",
      "path": "",
    },
    Object {
      "name": "favicon.ico",
      "path": "",
    },
    Object {
      "name": "bg.jpg",
      "path": "",
    },
    Object {
      "name": "logo.png",
      "path": "",
    },
    Object {
      "name": "foo.gif",
      "path": "",
    },
    Object {
      "name": "bar.png",
      "path": "",
    },
    Object {
      "name": "baz.js",
      "path": "",
    },
    Object {
      "name": "lorem.css",
      "path": "",
    },
  ],
  "log": Array [
    Object {
      "msg": "style.css uploaded",
      "type": "success",
    },
    Object {
      "msg": "main.js uploaded",
      "type": "success",
    },
    Object {
      "msg": "vendor.js uploaded",
      "type": "success",
    },
    Object {
      "msg": "index.html could not uploaded",
      "type": "error",
    },
  ],
  "show": true,
  "skipped": Array [],
}
`;

exports[`7- file conflict action. 1`] = `
Object {
  "completed": Array [
    Object {
      "name": "style.css",
      "path": "",
    },
    Object {
      "name": "main.js",
      "path": "",
    },
    Object {
      "name": "vendor.js",
      "path": "",
    },
  ],
  "conflict": true,
  "conflictFlag": 0,
  "current": "",
  "failed": Array [
    Object {
      "name": "index.html",
      "path": "",
    },
  ],
  "files": Array [
    Object {
      "name": "manifest.json",
      "path": "",
    },
    Object {
      "name": "favicon.ico",
      "path": "",
    },
    Object {
      "name": "bg.jpg",
      "path": "",
    },
    Object {
      "name": "logo.png",
      "path": "",
    },
    Object {
      "name": "foo.gif",
      "path": "",
    },
    Object {
      "name": "bar.png",
      "path": "",
    },
    Object {
      "name": "baz.js",
      "path": "",
    },
    Object {
      "name": "lorem.css",
      "path": "",
    },
  ],
  "log": Array [
    Object {
      "msg": "style.css uploaded",
      "type": "success",
    },
    Object {
      "msg": "main.js uploaded",
      "type": "success",
    },
    Object {
      "msg": "vendor.js uploaded",
      "type": "success",
    },
    Object {
      "msg": "index.html could not uploaded",
      "type": "error",
    },
  ],
  "show": true,
  "skipped": Array [],
}
`;

exports[`8- conflict flag action. 1`] = `
Object {
  "completed": Array [
    Object {
      "name": "style.css",
      "path": "",
    },
    Object {
      "name": "main.js",
      "path": "",
    },
    Object {
      "name": "vendor.js",
      "path": "",
    },
  ],
  "conflict": false,
  "conflictFlag": 2,
  "current": "",
  "failed": Array [
    Object {
      "name": "index.html",
      "path": "",
    },
  ],
  "files": Array [
    Object {
      "name": "manifest.json",
      "path": "",
    },
    Object {
      "name": "favicon.ico",
      "path": "",
    },
    Object {
      "name": "bg.jpg",
      "path": "",
    },
    Object {
      "name": "logo.png",
      "path": "",
    },
    Object {
      "name": "foo.gif",
      "path": "",
    },
    Object {
      "name": "bar.png",
      "path": "",
    },
    Object {
      "name": "baz.js",
      "path": "",
    },
    Object {
      "name": "lorem.css",
      "path": "",
    },
  ],
  "log": Array [
    Object {
      "msg": "style.css uploaded",
      "type": "success",
    },
    Object {
      "msg": "main.js uploaded",
      "type": "success",
    },
    Object {
      "msg": "vendor.js uploaded",
      "type": "success",
    },
    Object {
      "msg": "index.html could not uploaded",
      "type": "error",
    },
  ],
  "show": true,
  "skipped": Array [],
}
`;

exports[`9- file ok action. Conflict flag should change to 0. 1`] = `
Object {
  "completed": Array [
    Object {
      "name": "style.css",
      "path": "",
    },
    Object {
      "name": "main.js",
      "path": "",
    },
    Object {
      "name": "vendor.js",
      "path": "",
    },
    Object {
      "name": "manifest.json",
      "path": "",
    },
  ],
  "conflict": false,
  "conflictFlag": 0,
  "current": "",
  "failed": Array [
    Object {
      "name": "index.html",
      "path": "",
    },
  ],
  "files": Array [
    Object {
      "name": "favicon.ico",
      "path": "",
    },
    Object {
      "name": "bg.jpg",
      "path": "",
    },
    Object {
      "name": "logo.png",
      "path": "",
    },
    Object {
      "name": "foo.gif",
      "path": "",
    },
    Object {
      "name": "bar.png",
      "path": "",
    },
    Object {
      "name": "baz.js",
      "path": "",
    },
    Object {
      "name": "lorem.css",
      "path": "",
    },
  ],
  "log": Array [
    Object {
      "msg": "style.css uploaded",
      "type": "success",
    },
    Object {
      "msg": "main.js uploaded",
      "type": "success",
    },
    Object {
      "msg": "vendor.js uploaded",
      "type": "success",
    },
    Object {
      "msg": "index.html could not uploaded",
      "type": "error",
    },
    Object {
      "msg": "manifest.json uploaded",
      "type": "success",
    },
  ],
  "show": true,
  "skipped": Array [],
}
`;

exports[`10- file conflict action. 1`] = `
Object {
  "completed": Array [
    Object {
      "name": "style.css",
      "path": "",
    },
    Object {
      "name": "main.js",
      "path": "",
    },
    Object {
      "name": "vendor.js",
      "path": "",
    },
    Object {
      "name": "manifest.json",
      "path": "",
    },
  ],
  "conflict": true,
  "conflictFlag": 0,
  "current": "",
  "failed": Array [
    Object {
      "name": "index.html",
      "path": "",
    },
  ],
  "files": Array [
    Object {
      "name": "favicon.ico",
      "path": "",
    },
    Object {
      "name": "bg.jpg",
      "path": "",
    },
    Object {
      "name": "logo.png",
      "path": "",
    },
    Object {
      "name": "foo.gif",
      "path": "",
    },
    Object {
      "name": "bar.png",
      "path": "",
    },
    Object {
      "name": "baz.js",
      "path": "",
    },
    Object {
      "name": "lorem.css",
      "path": "",
    },
  ],
  "log": Array [
    Object {
      "msg": "style.css uploaded",
      "type": "success",
    },
    Object {
      "msg": "main.js uploaded",
      "type": "success",
    },
    Object {
      "msg": "vendor.js uploaded",
      "type": "success",
    },
    Object {
      "msg": "index.html could not uploaded",
      "type": "error",
    },
    Object {
      "msg": "manifest.json uploaded",
      "type": "success",
    },
  ],
  "show": true,
  "skipped": Array [],
}
`;

exports[`11- conflict flag action. 1`] = `
Object {
  "completed": Array [
    Object {
      "name": "style.css",
      "path": "",
    },
    Object {
      "name": "main.js",
      "path": "",
    },
    Object {
      "name": "vendor.js",
      "path": "",
    },
    Object {
      "name": "manifest.json",
      "path": "",
    },
  ],
  "conflict": false,
  "conflictFlag": 5,
  "current": "",
  "failed": Array [
    Object {
      "name": "index.html",
      "path": "",
    },
  ],
  "files": Array [
    Object {
      "name": "favicon.ico",
      "path": "",
    },
    Object {
      "name": "bg.jpg",
      "path": "",
    },
    Object {
      "name": "logo.png",
      "path": "",
    },
    Object {
      "name": "foo.gif",
      "path": "",
    },
    Object {
      "name": "bar.png",
      "path": "",
    },
    Object {
      "name": "baz.js",
      "path": "",
    },
    Object {
      "name": "lorem.css",
      "path": "",
    },
  ],
  "log": Array [
    Object {
      "msg": "style.css uploaded",
      "type": "success",
    },
    Object {
      "msg": "main.js uploaded",
      "type": "success",
    },
    Object {
      "msg": "vendor.js uploaded",
      "type": "success",
    },
    Object {
      "msg": "index.html could not uploaded",
      "type": "error",
    },
    Object {
      "msg": "manifest.json uploaded",
      "type": "success",
    },
  ],
  "show": true,
  "skipped": Array [],
}
`;

exports[`12- file skip action. Should add an item under "skipped".conflictFlag should be still 5 1`] = `
Object {
  "completed": Array [
    Object {
      "name": "style.css",
      "path": "",
    },
    Object {
      "name": "main.js",
      "path": "",
    },
    Object {
      "name": "vendor.js",
      "path": "",
    },
    Object {
      "name": "manifest.json",
      "path": "",
    },
  ],
  "conflict": false,
  "conflictFlag": 5,
  "current": "",
  "failed": Array [
    Object {
      "name": "index.html",
      "path": "",
    },
  ],
  "files": Array [
    Object {
      "name": "bg.jpg",
      "path": "",
    },
    Object {
      "name": "logo.png",
      "path": "",
    },
    Object {
      "name": "foo.gif",
      "path": "",
    },
    Object {
      "name": "bar.png",
      "path": "",
    },
    Object {
      "name": "baz.js",
      "path": "",
    },
    Object {
      "name": "lorem.css",
      "path": "",
    },
  ],
  "log": Array [
    Object {
      "msg": "style.css uploaded",
      "type": "success",
    },
    Object {
      "msg": "main.js uploaded",
      "type": "success",
    },
    Object {
      "msg": "vendor.js uploaded",
      "type": "success",
    },
    Object {
      "msg": "index.html could not uploaded",
      "type": "error",
    },
    Object {
      "msg": "manifest.json uploaded",
      "type": "success",
    },
    Object {
      "msg": "favicon.ico skipped",
      "type": "info",
    },
  ],
  "show": true,
  "skipped": Array [
    Object {
      "name": "favicon.ico",
      "path": "",
    },
  ],
}
`;

exports[`13- file skip action. Should add an item under "skipped".conflictFlag should be still 5 1`] = `
Object {
  "completed": Array [
    Object {
      "name": "style.css",
      "path": "",
    },
    Object {
      "name": "main.js",
      "path": "",
    },
    Object {
      "name": "vendor.js",
      "path": "",
    },
    Object {
      "name": "manifest.json",
      "path": "",
    },
  ],
  "conflict": false,
  "conflictFlag": 5,
  "current": "",
  "failed": Array [
    Object {
      "name": "index.html",
      "path": "",
    },
  ],
  "files": Array [
    Object {
      "name": "logo.png",
      "path": "",
    },
    Object {
      "name": "foo.gif",
      "path": "",
    },
    Object {
      "name": "bar.png",
      "path": "",
    },
    Object {
      "name": "baz.js",
      "path": "",
    },
    Object {
      "name": "lorem.css",
      "path": "",
    },
  ],
  "log": Array [
    Object {
      "msg": "style.css uploaded",
      "type": "success",
    },
    Object {
      "msg": "main.js uploaded",
      "type": "success",
    },
    Object {
      "msg": "vendor.js uploaded",
      "type": "success",
    },
    Object {
      "msg": "index.html could not uploaded",
      "type": "error",
    },
    Object {
      "msg": "manifest.json uploaded",
      "type": "success",
    },
    Object {
      "msg": "favicon.ico skipped",
      "type": "info",
    },
    Object {
      "msg": "bg.jpg skipped",
      "type": "info",
    },
  ],
  "show": true,
  "skipped": Array [
    Object {
      "name": "favicon.ico",
      "path": "",
    },
    Object {
      "name": "bg.jpg",
      "path": "",
    },
  ],
}
`;

exports[`14- reset queue 1`] = `
Object {
  "completed": Array [],
  "conflict": false,
  "conflictFlag": 0,
  "current": "",
  "failed": Array [],
  "files": Array [],
  "log": Array [],
  "show": false,
  "skipped": Array [],
}
`;
